docs/api/qiskit/0.33/extensions.md
---
title: extensions
description: API reference for qiskit.extensions
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.extensions
---

<span id="module-qiskit.extensions" />

<span id="qiskit-extensions" />

# Quantum Circuit Extensions

<span id="module-qiskit.extensions" />

`qiskit.extensions`

## Unitary Extensions

|                                                                                                                                                                       |                                                                                 |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- |
| [`UnitaryGate`](qiskit.extensions.UnitaryGate#qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")(data\[, label])                                          | Class for representing unitary gates                                            |
| [`HamiltonianGate`](qiskit.extensions.HamiltonianGate#qiskit.extensions.HamiltonianGate "qiskit.extensions.HamiltonianGate")(data, time\[, label])                    | Class for representing evolution by a Hermitian Hamiltonian operator as a gate. |
| [`SingleQubitUnitary`](qiskit.extensions.SingleQubitUnitary#qiskit.extensions.SingleQubitUnitary "qiskit.extensions.SingleQubitUnitary")(unitary\_matrix\[, mode, …]) | u = 2\*2 unitary (given as a (complex) numpy.ndarray)                           |

## Simulator Extensions

|                                                                                                                                            |                                 |
| ------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------- |
| [`Snapshot`](qiskit.extensions.Snapshot#qiskit.extensions.Snapshot "qiskit.extensions.Snapshot")(label\[, snapshot\_type, num\_qubits, …]) | Simulator snapshot instruction. |

## Initialization

|                                                                                                                                  |                                   |
| -------------------------------------------------------------------------------------------------------------------------------- | --------------------------------- |
| [`Initialize`](qiskit.extensions.Initialize#qiskit.extensions.Initialize "qiskit.extensions.Initialize")(params\[, num\_qubits]) | Complex amplitude initialization. |

